# PhishingDomainDetector

./: .gitignore  LICENSE  README.md  app.py  domains.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_feed.py  test_heuristics.py  test_heuristics_advanced.py  test_pipeline.py  test_typosquat.py
utils/: api_checks.py  feed.py  heuristics.py  normalize.py  output.py
